chore: automatiza copiado de _redirects a dist en postbuild

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
+    "postbuild:web": "copy public\\_redirects dist\\_redirects",
     "lint": "expo lint"
   },
   "dependencies": {
