Refactorización y nuevas funcionalidades
- Añadido soporte para autenticación con `AuthContext`.
- Refactorización de rutas en `app/(tabs)` para mejorar la organización.
- Nueva funcionalidad: exportar preguntas a CSV y JSON (`scripts/exportQuestionsToCsv.ts`, `scripts/exportQuestionsToJson.ts`).
- Integración inicial con Supabase (`services/supabaseClient.ts`).
- Mejoras en el diseño de la UI para el modo libre y ajustes en la configuración.
- Actualización de dependencias en `package.json`.
- Eliminación de archivos obsoletos (`app/free-mode.tsx`).
- Añadidos nuevos componentes para la administración de preguntas y feedback (`app/admin`).

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,29 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# backup files
+*_backup.*
+*.backup
+*.bak
+
+# export/import files
+questions_export.*
+*_export.*
+
+# logs
+*.log
+logs/
+
+# temp files
+*.tmp
+*.temp
+temp/
+
+# IDE files
+.vscode/settings.json
+.idea/
+
+# cache
+.cache/
+*.cache
