Refactor: split de progreso historia/libre
- Separación real de progreso entre Modo Historia y Modo Libre (no más mezcla de puntajes)
- Actualización de instrucciones Copilot para reflejar la arquitectura y workflows actuales
- Limpieza y mejora de .gitignore (excluye archivos temporales de carga)
- Mejoras en storage y contexto para robustez y claridad
- Código listo para seguir creciendo (admin, Supabase, testing)

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ yarn-error.*
 questions_export.*
 *_export.*
 
+# archivos de carga temporal
+PREGUNTAS_PARA_BASE_DE_DATOS.sql
+
 # logs
 *.log
 logs/
