✨ Free Mode mixto + paginación admin + debug
- Modo Libre: opción "Mixto" para jugar con preguntas de todas las sagas mezcladas.
- Admin preguntas: paginación compacta y responsiva (máx 3 números, flechas, nunca se rompe en mobile/desktop).
- Quiz: logs de depuración para story mode y UI.
- Script debugStoryMode.ts para testear selección de preguntas por dificultad.
- Limpieza y mejoras menores en lógica de preguntas y UX.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
     "postbuild:web": "copy public\\_redirects dist\\_redirects",
-    "lint": "expo lint"
+  "lint": "expo lint",
+  "debug:story": "ts-node ./scripts/debugStoryMode.ts"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
