✨ Ranking global, modo libre flexible y mejoras UX
- Nueva pantalla de Ranking global (tabs) con doble modo (Libre/Historia)
- Modo Libre: ahora permite jugar cualquier combinación (solo Mixto/Mixto/10 cuenta para ranking)
- Mensajes claros de elegibilidad para ranking en la UI
- Sincronización de puntajes con Supabase solo si la partida es válida
- Modal de username mejorado y opción de cambio en Ajustes
- Mejoras en distribución de preguntas mixtas (3/3/4) y lógica de selección
- Refactor y fixes menores en contexto, storage y feedback

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "One Piece Quiz by tinchopps beta",
-    "slug": "one-piece-quiz-tinchopps-beta",
+    "name": "Trivia-Nakama",
+    "slug": "Trivia-Nakama",
     "version": "4.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
